[instrumentation] Fix probe/BUILD.gn dependencies

There are two targets. One for generating sources and another for compiling files.

BUG=709568

Review-Url: https://codereview.chromium.org/2807123005
Cr-Commit-Position: refs/heads/master@{#465070}

Former-commit-id: 63b2fd059db083da191d2dd9c53eb680baf2e010